--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@rollup/plugin-typescript": "11.1.3",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
+    "eslint": "^8.48.0",
     "husky": "8.0.3",
     "rollup": "3.28.1",
     "tslib": "2.6.2",
@@ -67,6 +68,7 @@
     "axios": "1.5.0",
     "bip39": "3.1.0",
     "nanoid": "4.0.2",
+    "typescript": "^5.2.2",
     "zod": "3.22.2"
   }
 }
