--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Rapidly build Web3 apps on the Cardano Blockchain.",
   "homepage": "https://meshjs.dev",
   "author": "MeshJS",
-  "version": "1.5.5",
+  "version": "1.5.11-beta.4",
   "license": "Apache-2.0",
   "type": "module",
   "repository": {
@@ -52,7 +52,7 @@
     "@rollup/plugin-typescript": "11.1.3",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.56.0",
     "husky": "8.0.3",
     "rollup": "3.28.1",
     "tslib": "2.6.2",
@@ -65,7 +65,7 @@
     "@emurgo/cardano-message-signing-asmjs": "1.0.1",
     "@emurgo/cardano-serialization-lib-asmjs": "11.5.0",
     "@emurgo/cip14-js": "3.0.1",
-    "axios": "1.5.0",
+    "axios": "1.6.3",
     "bip39": "3.1.0",
     "nanoid": "4.0.2",
     "typescript": "^5.2.2",
